--- a/sass/style.css
+++ b/sass/style.css
@@ -66,7 +66,7 @@ ul {
     position: relative;
     margin-left: 15px;
     width: 100%;
-    width: 85%;
+    width: 83%;
     padding: 15px 0; }
     .navigation--box--topline {
       display: block;
@@ -78,7 +78,7 @@ ul {
       display: inline-block;
       float: left;
       position: relative;
-      width: 45%; }
+      width: 46%; }
       .navigation--box--contacts h4 {
         font-family: "MyriadProRegular";
         text-transform: uppercase;
@@ -125,6 +125,77 @@ ul {
           margin-left: 0; }
           .navigation--box--contacts p:first-of-type:after {
             content: none; }
+    .navigation--box--delivery {
+      display: block;
+      float: left;
+      position: relative;
+      width: 30%; }
+      .navigation--box--delivery h3 {
+        font-family: "ProximaNovaRegular";
+        font-size: 20px;
+        color: #FFF;
+        margin: 0;
+        text-transform: uppercase;
+        line-height: 27px; }
+      .navigation--box--delivery p {
+        display: block;
+        font-size: 10px;
+        color: #FFF;
+        font-family: "ProximaNovaBold";
+        margin-bottom: 0; }
+    .navigation--box--onlinecam {
+      display: block;
+      float: left;
+      width: 22%;
+      padding-top: 5px;
+      position: relative; }
+      .navigation--box--onlinecam a {
+        display: block;
+        text-decoration: none;
+        width: 127px;
+        height: 30px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        border-radius: 10px;
+        -o-background-clip: padding-box;
+        background-clip: padding-box;
+        border: 1px solid #ef3f35;
+        text-transform: uppercase;
+        font-size: 10px;
+        font-family: "ProximaNovaRegular";
+        text-align: center;
+        line-height: 30px;
+        color: #EF3F35;
+        -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+        -ms-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        transition: all 0.2s linear; }
+        .navigation--box--onlinecam a i {
+          margin-right: 5px; }
+        .navigation--box--onlinecam a:hover, .navigation--box--onlinecam a:active, .navigation--box--onlinecam a:focus {
+          background-color: #EF3F35;
+          color: #fff; }
+  .navigation--navline {
+    display: block;
+    float: left;
+    position: relative;
+    width: 100%; }
+    .navigation--navline ul {
+      padding: 0; }
+      .navigation--navline ul li {
+        display: block;
+        float: left;
+        position: relative; }
+        .navigation--navline ul li a {
+          font-size: 16px;
+          color: #FFF;
+          font-family: "ProximaNovaRegular";
+          text-transform: uppercase;
+          padding-right: 20px;
+          text-decoration: none;
+          font-weight: 600; }
 
 .basket {
   display: block;
