--- a/sass/header/_navigation.scss
+++ b/sass/header/_navigation.scss
@@ -25,7 +25,7 @@
 			width: 100%;
 			padding-bottom: 15px;
 			border-bottom: 1px solid #424242;
-			
+			margin-bottom: 7px;			
 		}	
 		&--contacts {
 			display: inline-block;
@@ -142,11 +142,14 @@
 		position: relative;
 		width: 100%;
 		ul {
+			display: block;
+			float: left;
 			padding: 0;
+			margin-bottom: 0;
 			li {
 				display: block;
 				float: left;
-				position: relative;
+				position: relative;				
 				a {
 					font-size: 16px;
 					color: #FFF;
@@ -155,6 +158,26 @@
 					padding-right: 20px;
 					text-decoration: none;
 					font-weight: 600;
+					@include transition(0.2s);
+					&:hover, &:active, &:focus {
+						color: #FE3F31;
+					}
+				}
+				&:after {
+					content: "";
+					width: 3px;
+					height: 3px;
+					@include border-radius(50%);
+					background-color: #FE3F31;
+					display: block;
+					position: absolute;
+					right: 7px;
+					top: 45%;
+				}
+				&:last-of-type {
+					&:after {
+						content: none;
+					}
 				}
 			}
 		}
