--- a/sass/style.css
+++ b/sass/style.css
@@ -73,7 +73,8 @@ ul {
       float: left;
       width: 100%;
       padding-bottom: 15px;
-      border-bottom: 1px solid #424242; }
+      border-bottom: 1px solid #424242;
+      margin-bottom: 7px; }
     .navigation--box--contacts {
       display: inline-block;
       float: left;
@@ -183,7 +184,10 @@ ul {
     position: relative;
     width: 100%; }
     .navigation--navline ul {
-      padding: 0; }
+      display: block;
+      float: left;
+      padding: 0;
+      margin-bottom: 0; }
       .navigation--navline ul li {
         display: block;
         float: left;
@@ -195,7 +199,29 @@ ul {
           text-transform: uppercase;
           padding-right: 20px;
           text-decoration: none;
-          font-weight: 600; }
+          font-weight: 600;
+          -webkit-transition: all 0.2s linear;
+          -moz-transition: all 0.2s linear;
+          -ms-transition: all 0.2s linear;
+          -o-transition: all 0.2s linear;
+          transition: all 0.2s linear; }
+          .navigation--navline ul li a:hover, .navigation--navline ul li a:active, .navigation--navline ul li a:focus {
+            color: #FE3F31; }
+        .navigation--navline ul li:after {
+          content: "";
+          width: 3px;
+          height: 3px;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          border-radius: 50%;
+          background-color: #FE3F31;
+          display: block;
+          position: absolute;
+          right: 7px;
+          top: 45%; }
+        .navigation--navline ul li:last-of-type:after {
+          content: none; }
 
 .basket {
   display: block;
