--- a/sass/content/_sidebar.scss
+++ b/sass/content/_sidebar.scss
@@ -90,6 +90,8 @@
 			@include transition(0.2s);
 			&:hover {
 				background-color: darken(#EF3F35, 10%);
+				text-decoration: none;
+				color: #fff;
 			}
 		}
 	}
