--- a/sass/header/_navigation.scss
+++ b/sass/header/_navigation.scss
@@ -5,6 +5,7 @@
 	-webkit-box-shadow: 0 8px 12px rgba(0,0,0,.11);
 	box-shadow: 0 8px 12px rgba(0,0,0,.11);
 	z-index: 1;
+    border-bottom: 0;
 	&--logo {
 		display: block;
 		float: left;
@@ -21,14 +22,14 @@
 		margin-left: 15px;
 		width: 100%;
 		width: 83%;
-		padding: 15px 0;	
+		padding: 10px 0;	
 		&--topline {
 			display: block;
 			float: left;
 			width: 100%;
 			padding-bottom: 15px;
 			border-bottom: 1px solid #424242;
-			margin-bottom: 7px;			
+			margin-bottom: 10px;			
 		}	
 		&--contacts {
 			display: inline-block;
