--- a/sass/libs/_mixins.scss
+++ b/sass/libs/_mixins.scss
@@ -34,4 +34,29 @@
 @mixin text-shadow ($shadow) {
 	text-shadow: $shadow;
 }
-	
+
+@mixin inside-pad() {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;	
+	&:before,
+	&:after{		
+		display: table;
+		content: " ";
+	}
+	&:after{
+		clear: both;
+	}
+}
+
+@mixin overflow-img() {
+	overflow: hidden;
+	img {
+		min-width: 100%;
+		height: auto;
+		position: relative;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%,-50%);
+	}
+}
