--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -9,6 +9,9 @@
 	.align-right {
 		text-align: center;
 	}
+	.basket--width {
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 500px) {
