--- a/sass/style.css
+++ b/sass/style.css
@@ -22,6 +22,37 @@
   font-family: 'ProximaNovaLight';
   src: url("../fonts/ProximaNova/ProximaNovaLight.eot");
   src: url("../fonts/ProximaNova/ProximaNovaLight.eot") format("embedded-opentype"), url("../fonts/ProximaNova/ProximaNovaLight.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNovaLight.woff") format("woff"), url("../fonts/ProximaNova/ProximaNovaLight.ttf") format("truetype"), url("../fonts/ProximaNova/ProximaNovaLight.svg#ProximaNovaLight") format("svg"); }
+.main__carousel .slick-dots {
+  bottom: 50px; }
+  .main__carousel .slick-dots li button {
+    width: 10px;
+    height: 10px; }
+    .main__carousel .slick-dots li button:before {
+      font-size: 0;
+      width: 10px;
+      height: 10px;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      border-radius: 50%;
+      background-color: #000;
+      opacity: .75;
+      -webkit-transition: all 0.2s linear;
+      -moz-transition: all 0.2s linear;
+      -ms-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear; }
+  .main__carousel .slick-dots li.slick-active button {
+    width: 15px;
+    height: 15px; }
+    .main__carousel .slick-dots li.slick-active button:before {
+      -webkit-transform: scale(1.4);
+      -moz-transform: scale(1.4);
+      -ms-transform: scale(1.4);
+      -o-transform: scale(1.4);
+      transform: scale(1.4);
+      opacity: 1; }
+
 a {
   text-decoration: none; }
   a:hover, a:focus, a:active {
@@ -54,7 +85,8 @@ ul {
   -moz-box-shadow: 0 8px 12px rgba(0, 0, 0, 0.11);
   -webkit-box-shadow: 0 8px 12px rgba(0, 0, 0, 0.11);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.11);
-  z-index: 1; }
+  z-index: 1;
+  border-bottom: 0; }
   .navigation--logo {
     display: block;
     float: left;
@@ -69,14 +101,14 @@ ul {
     margin-left: 15px;
     width: 100%;
     width: 83%;
-    padding: 15px 0; }
+    padding: 10px 0; }
     .navigation--box--topline {
       display: block;
       float: left;
       width: 100%;
       padding-bottom: 15px;
       border-bottom: 1px solid #424242;
-      margin-bottom: 7px; }
+      margin-bottom: 10px; }
     .navigation--box--contacts {
       display: inline-block;
       float: left;
@@ -225,6 +257,156 @@ ul {
         .navigation--navline ul li:last-of-type:after {
           content: none; }
 
+.main__wrapper {
+  width: 100%;
+  display: block;
+  float: left;
+  position: relative;
+  padding-top: 110px; }
+
+.main__carousel {
+  height: 650px;
+  position: relative;
+  margin-bottom: 0 !important; }
+  .main__carousel--item {
+    height: 650px !important;
+    display: block;
+    position: relative;
+    overflow: hidden; }
+    .main__carousel--item img {
+      min-width: 100%;
+      height: auto;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+    .main__carousel--item img {
+      max-width: 150%;
+      max-height: 150%;
+      width: auto;
+      height: 100%; }
+    .main__carousel--item--content {
+      display: block;
+      float: left;
+      position: absolute;
+      z-index: 10;
+      top: 65px;
+      left: 15px;
+      right: 15px;
+      padding-bottom: 50px; }
+      .main__carousel--item--content h2 {
+        font-family: "ProximaNovaBold";
+        text-transform: uppercase;
+        font-weight: 900;
+        font-size: 40px;
+        color: #FFF;
+        display: block;
+        float: left;
+        width: 100%;
+        margin-bottom: 30px; }
+        .main__carousel--item--content h2 span {
+          background-color: #F14036;
+          padding: 5px 10px;
+          display: block;
+          float: left; }
+      .main__carousel--item--content_bord {
+        display: block;
+        width: 68px;
+        height: 2px;
+        background-color: #fff;
+        float: left; }
+      .main__carousel--item--content h3 {
+        font-family: "ProximaNovaBold";
+        text-transform: uppercase;
+        font-weight: 900;
+        font-size: 30px;
+        color: #FFF;
+        display: block;
+        float: left;
+        width: 100%;
+        margin-top: 30px;
+        margin-bottom: 30px; }
+      .main__carousel--item--content p.sushi--title {
+        font-family: "ProximaNovaRegular";
+        font-weight: 700;
+        margin-bottom: 20px;
+        margin-top: 0;
+        color: #FFF;
+        text-transform: uppercase;
+        padding-left: 30px;
+        background-image: url("../img/131-32.png");
+        background-repeat: no-repeat;
+        background-position: 0 50%;
+        display: block;
+        float: left;
+        width: 100%; }
+      .main__carousel--item--content a.go-to-more {
+        display: block;
+        float: left;
+        position: relative;
+        margin: 10px 0;
+        text-align: center;
+        color: #FFF;
+        font-size: 18px;
+        font-family: "ProximaNovaRegular";
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 10px 30px;
+        text-decoration: none;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        -ms-border-radius: 12px;
+        border-radius: 12px;
+        -o-background-clip: padding-box;
+        background-clip: padding-box;
+        background-color: #f13f35;
+        -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+        -ms-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        transition: all 0.2s linear; }
+        .main__carousel--item--content a.go-to-more:hover, .main__carousel--item--content a.go-to-more:active, .main__carousel--item--content a.go-to-more:focus {
+          background-color: #e31b10; }
+
+.advantages {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  padding: 50px 0; }
+  .advantages__icon {
+    display: block;
+    height: 124px;
+    line-height: 124px;
+    width: 124px;
+    margin: 0 auto; }
+  .advantages__title {
+    display: flex;
+    vertical-align: middle;
+    line-height: 60px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    min-height: 60px;
+    line-height: 60px;
+    padding: 0 15px;
+    margin-bottom: 15px; }
+    .advantages__title h4 {
+      font-family: "ProximaNovaRegular";
+      font-weight: 700;
+      color: #000;
+      margin: 0;
+      font-size: 16px;
+      text-transform: uppercase; }
+  .advantages__desc {
+    padding: 0 15px; }
+    .advantages__desc p {
+      font-size: 14px;
+      color: #7F7F7F;
+      font-family: "ProximaNovaRegular";
+      font-weight: 700; }
+
 .basket {
   display: block;
   position: fixed;
@@ -321,7 +503,9 @@ ul {
       -o-transition: all 0.2s linear;
       transition: all 0.2s linear; }
       .basket__foot--order:hover {
-        background-color: #df1d12; }
+        background-color: #df1d12;
+        text-decoration: none;
+        color: #fff; }
   .basket__content {
     display: block;
     float: left;
@@ -518,6 +702,9 @@ ul {
     text-align: center; }
 
   .align-right {
-    text-align: center; } }
+    text-align: center; }
+
+  .basket--width {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
