--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -150,3 +150,49 @@
 		}
 	}
 }
+
+.social-media {
+	display: block;
+	float: left;
+	position: relative;
+	width: 100%;
+	padding: 40px 0;
+	background-color: #D8D9DB;
+	background-image: url('../img/Layer-12-2.png');
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	-webkit-background-size: contain;
+	     -o-background-size: contain;
+	        background-size: contain;
+	h3 {
+		font-size: 20px;
+		text-transform: uppercase;
+		color: #263A47;
+		font-family: $r;
+		font-weight: 700;
+		margin: 0;
+		line-height: 25px;
+	}
+	&--icon-wrap  {
+		a {
+			display: block;
+			float: left;
+			position: relative;
+			margin-left: 10px;
+			width: 50px;
+			height: 50px;
+			@include border-radius(20px);
+			border: 2px solid #263A47;
+			color: #2A3E4A;
+			text-align: center;
+			font-size: 19px;
+			line-height: 50px;
+			&:hover {
+				background-color: #263A47;
+				color: #D8D9DB;
+				@include border-radius(20px);
+				border: 2px solid #263A47;
+			}
+		}
+	}
+}
