--- a/sass/style.css
+++ b/sass/style.css
@@ -407,6 +407,52 @@ ul {
       font-family: "ProximaNovaRegular";
       font-weight: 700; }
 
+.social-media {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+  padding: 40px 0;
+  background-color: #D8D9DB;
+  background-image: url("../img/Layer-12-2.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  -webkit-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain; }
+  .social-media h3 {
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #263A47;
+    font-family: "ProximaNovaRegular";
+    font-weight: 700;
+    margin: 0;
+    line-height: 25px; }
+  .social-media--icon-wrap a {
+    display: block;
+    float: left;
+    position: relative;
+    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    border-radius: 20px;
+    border: 2px solid #263A47;
+    color: #2A3E4A;
+    text-align: center;
+    font-size: 19px;
+    line-height: 50px; }
+    .social-media--icon-wrap a:hover {
+      background-color: #263A47;
+      color: #D8D9DB;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      -ms-border-radius: 20px;
+      border-radius: 20px;
+      border: 2px solid #263A47; }
+
 .basket {
   display: block;
   position: fixed;
