--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -196,3 +196,71 @@
 		}
 	}
 }
+
+.reviews {
+	display: block;
+	float: left;
+	width: 100%;
+	position: relative;
+	padding: 50px 0;
+	h1 {
+		text-transform: uppercase;
+		color: #000;
+		text-align: center;
+		font-size: 24px;
+		font-family: $r;
+		font-weight: 700;
+	}
+	&__carousel {
+		&__item {
+			padding-left: 15px;
+			margin: 15px 0;
+			&--img {
+				width: 67px;
+				height: 67px;
+				@include border-radius(33px);
+				display: block;
+				margin: 15px auto;
+				@include overflow-img;
+
+			}
+			h3 {
+				text-align: center;
+				text-transform: uppercase;
+				font-size: 16px;
+				font-family: $r;
+				font-weight: 700;
+			}
+			p {
+				font-size: 14px;
+				font-family: $r;
+				font-weight: 500;
+				color: #7F7F7F;
+			}
+			small {
+				font-family: $r;
+				font-weight: 500;
+				color: #7F7F7F;
+				font-size: 10px;
+				margin-top: 15px;
+			}
+		}
+	}
+	&__all {
+		display: block;
+		float: left;
+		position: relative;
+		width: 100%;
+		text-align: center;
+		margin-top: 10px;
+		a {
+			color: #EF4036;
+			font-size: 14px;
+			font-family: $r;
+			font-weight: 700;
+			&:hover {
+				color: #EF4036;
+			}
+		}
+	}
+}
