--- a/sass/content/_index.scss
+++ b/sass/content/_index.scss
@@ -187,6 +187,7 @@
 			text-align: center;
 			font-size: 19px;
 			line-height: 50px;
+			@include transition(0.2s);
 			&:hover {
 				background-color: #263A47;
 				color: #D8D9DB;
@@ -213,6 +214,7 @@
 	}
 	&__carousel {
 		&__item {
+			padding-right: 30px;
 			padding-left: 15px;
 			margin: 15px 0;
 			&--img {
@@ -262,5 +264,93 @@
 				color: #EF4036;
 			}
 		}
+	}
+}
+
+.cookathome {
+	display: block;
+	float: left;
+	position: relative;
+	width: 100%;
+	padding: 40px 0;
+	background-image: url('../img/Layer-14-1.png');
+	background-repeat: no-repeat;
+	background-position: 100% 50%;
+	-webkit-background-size: cover;
+	     -o-background-size: cover;
+	        background-size: cover;
+	h3 {
+		font-size: 20px;
+		text-transform: uppercase;
+		color: #fff;
+		font-family: $r;
+		font-weight: 700;
+		margin: 0;
+		line-height: 25px;
+	}
+	a {
+		display: block;
+		position: relative;
+		margin: 0 auto;
+		width: 50px;
+		height: 50px;
+		@include border-radius(20px);
+		background-color: #DD3C34;
+		color: #fff;
+		text-align: center;
+		font-size: 19px;
+		line-height: 50px;
+		@include transition(0.2s);
+		&:hover {
+			background-color: darken(#DD3C34, 10%);
+			color: #fff;
+			@include border-radius(20px);
+		}
+	}	
+}
+
+.sitedescription {
+	display: block;
+	float: left;
+	position: relative;
+	width: 100%;
+	padding: 40px 0 60px;
+	h2 {
+		font-weight: 700;
+		font-family: $r;
+		text-transform: uppercase;
+		text-align: center;
+		color: #000;
+		font-size: 24px;
+		margin-bottom: 30px;
+	}
+	p {
+		font-family: $r;
+		font-weight: 700;
+		color: #7F7F7F;
+		font-size: 14px;
+	}
+	.showmore--but {
+		margin-top: -25px;
+		padding-top: 25px;
+		position: absolute;
+		width: 100%;
+		background-color: #fff;
+		background: -moz-linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
+		background: -webkit-linear-gradient(top,rgba(255,245,255,0) 0,rgba(255,255,245,1) 38%);
+		background: -ms-linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
+		background: linear-gradient(top,rgba(255,255,245,0) 0,rgba(255,255,245,1) 38%);
+		a {
+			font-size: 14px;
+			color: #EF4036;
+			font-weight: 700;
+			font-family: $r;
+		}	
+	}
+	a.showmore--but--less {
+		font-size: 14px;
+		color: #EF4036;
+		font-weight: 700;
+		font-family: $r;
 	}
 }
