--- a/sass/style.css
+++ b/sass/style.css
@@ -963,6 +963,40 @@ ul {
       .basket--flipper:hover img {
         display: none; }
 
+.footer {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+  padding: 40px 0;
+  background-color: #FAFAFA; }
+  .footer p {
+    color: #7F7F7F;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "ProximaNovaRegular"; }
+  .footer__menu {
+    padding: 10px 0; }
+    .footer__menu li {
+      margin-bottom: 10px; }
+      .footer__menu li a {
+        font-size: 14px;
+        color: #EF4036;
+        font-weight: 700;
+        font-family: "ProximaNovaRegular"; }
+  .footer__copyright {
+    display: block;
+    float: left;
+    position: relative;
+    width: 100%;
+    border-top: 1px solid #E1E1E1;
+    padding: 40px 0 10px;
+    margin-right: 30px; }
+    .footer__copyright p {
+      color: #7F7F7F;
+      font-size: 14px;
+      font-family: "ProximaNovaRegular"; }
+
 @media only screen and (max-width: 770px) {
   .align-left {
     text-align: center; }
