--- a/sass/header/_navigation.scss
+++ b/sass/header/_navigation.scss
@@ -121,7 +121,6 @@
 				width: 127px;
 				height: 30px;
 				@include border-radius(10px);
-				@include background-clip(padding-box);
 				border: 1px solid #ef3f35;
 				text-transform: uppercase;
 				font-size: 10px;
@@ -135,8 +134,18 @@
 				}
 				&:hover, &:active, &:focus {
 					background-color: #EF3F35;
+					border: 1px solid #ef3f35;
 					color: #fff;
 				}
+			}
+		}
+		&--menutoggle {
+			display: none;
+			width: 11%;
+			@extend .navigation--box--onlinecam;
+			a {
+				font-weight: 700;
+				width: 100%;
 			}
 		}
 	}
@@ -181,6 +190,25 @@
 				&:last-of-type {
 					&:after {
 						content: none;
+					}
+				}
+			}
+		}
+		&--active {
+			display: none;
+			width: 50%;
+			@include transition(.3s);
+			ul {
+				li {
+					display: block;
+					width: 100%;
+					margin: 5px 0;
+					text-align: center;
+					a {
+
+						&:after {
+							content: none;
+						}
 					}
 				}
 			}
