--- a/css/style-igor.css
+++ b/css/style-igor.css
@@ -45,6 +45,11 @@
 }
 
 .navigationtabs--tabs li a{
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
     border: 1px solid #fff;
     border-radius: 10px;
     font-family: 'ProximaNovaLight';
@@ -56,11 +61,11 @@
 }
 
 .navigationtabs--tabs li a:hover{
-    -webkit-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-    -moz-transition: .3s;
-    transition: .3s;
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
     border: 1px solid #f14036;
     background-color: #F14036;
     color: #fff;
@@ -73,16 +78,17 @@
 }
 
 .navigationtabs--tabs li.active a:hover{
-    -webkit-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-    -moz-transition: .3s;
-    transition: .3s;
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
     background-color: #F14036;
     color: #fff;
 }
 
 .categoryitems__item{
+    display: inline-block;
     text-align: center;
     margin: 0 40px 65px 40px;
 }
@@ -134,6 +140,7 @@
     display: block;
     font-size: 16px;
 }
+
 .categoryitems__item--numbs{
     display: inline-block;
 }
@@ -148,6 +155,11 @@
 }
 
 .categoryitems__item--buybtn{
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
     line-height: 1;
     outline: none;
     font-family: 'ProximaNovaLight';
@@ -163,11 +175,11 @@
 }
 
 .categoryitems__item--buybtn:hover{
-    -webkit-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-    -moz-transition: .3s;
-    transition: .3s;
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
     background-color: #F14036;
     color: #fff;
 }
@@ -176,4 +188,174 @@
     font-family: 'ProximaNovaLight';
     font-size: 10px;
     color: #A0A0A0;
+}
+
+.recomend {
+    text-align: center;
+}
+
+.recomend h1{
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: "ProximaNovaRegular";
+    font-size: 30px;
+    color: #000;
+    margin-bottom: 40px;
+}
+
+.product{
+    text-align: center;
+}
+
+.product h1{
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: "ProximaNovaRegular";
+    font-size: 30px;
+    color: #000;
+}
+
+.product--item--info{
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 30px;
+}
+
+.product--item__thumb{
+    display: inline-block;
+    max-width: 450px;
+    max-height: 300px;
+    margin: 30px auto;
+}
+
+.product--item--info--price{
+    font-family: "ProximaNovaBold";
+    color: #000;
+    display: block;
+    font-size: 16px;
+    margin: 5px auto;
+}
+
+.product--item--info--numbs{
+    display: inline-block;
+}
+
+.product--item--info--numbs__weight {
+    display: inline-block;
+    /* float: left;*/
+    font-size: 11px;
+    margin-right: 20px;
+    font-family: "ProximaNovaRegular";
+    font-weight: 600;
+    padding-left: 20px;
+    background-image: url("../img/44-16.png");
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    color: #A0A0A0;
+}
+
+.product--item--info--numbs__qt {
+    display: inline-block;
+    /*float: left;*/
+    font-size: 11px;
+    font-family: "ProximaNovaRegular";
+    font-weight: 600;
+    background-image: url("../img/food-drink-26-16.png");
+    background-repeat: no-repeat;
+    padding-left: 20px;
+    background-position: 0 50%;
+    color: #A0A0A0;
+}
+
+.product--item--info--price span{
+    display: inline-block;
+    /*float: left;*/
+}
+
+.product--item--info--price__num{
+    font-size: 34px;
+}
+
+.product--item--info__buybtn{
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
+    line-height: 1;
+    outline: none;
+    font-family: "ProximaNovaRegular";
+    font-weight: 700;
+    font-size: 15px;
+    border: 1px solid #F14036;
+    color: #F14036;
+    background-color: #fff;
+    border-radius: 13px;
+    text-transform: uppercase;
+    padding: 11px 25px;
+    margin-bottom: 20px;
+}
+
+.product--item--info__buybtn:hover{
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    transition: all .3s linear;
+    background-color: #F14036;
+    color: #fff;
+}
+
+.product--ingredients{
+    display: block;
+    margin-bottom: 30px;
+}
+
+.product--ingredients--item{
+    display: inline-block;
+}
+
+.product--ingredients p{
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+    height: 10px;
+    border-bottom: solid 1px #cdcdcd;
+    text-align: center;
+}
+
+.product--ingredients p span{
+    display: inline-block;
+    background-color: #fff;
+    padding: 0 10px;
+    font-family: 'ProximaNovaLight';
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.product--ingredients--item{
+    margin: 25px 10px;
+}
+
+.product--ingredients--item img{
+    vertical-align: top;
+    width: 65px;
+    height: 65px;
+    border-radius: 25px;
+    border: 2px solid #e5e5e5;
+    padding: 5px 0;
+}
+
+.product--ingredients--item p{
+    font-family: 'ProximaNovaLight';
+    font-size: 10px;
+    color: #a0a0a0;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    height: auto;
+    border: none;
+    text-align: center;
+    font-weight: 700;
+    padding: 10px 0;
 }
