--- a/sass/responsive/_style.scss
+++ b/sass/responsive/_style.scss
@@ -25,7 +25,7 @@
 	}
 
 	.navigation--box--contacts {
-		width: 28%;
+		width: 50%;
 		p {
 			display: none;
 		}
@@ -36,7 +36,7 @@
 		}
 	}
 	.navigation--box--delivery {
-		width: 25%;
+		width: 40%;
 	}
 	.navigation--box--onlinecam {
 		display: none;
@@ -50,6 +50,7 @@
 	.navigation {
 		height: auto;
 	    margin-bottom: 0;
+	    z-index: 9999;
 	}
 	.navigation--box {
 		margin-left: 15%;
@@ -93,10 +94,123 @@
 		margin-bottom: 15px;
 		font-size: 12px;
 	}
+	.footer__menu {
+		height: 210px;
+	}
+	.navigation--box--topline {
+	    float: left;
+	    display: block;
+	    width: 54%;
+	}
+
+}
+
+@media only screen and (max-width: 737px) {
+	.basket--width {
+		display: none;
+	}
+	.basket--width--active {
+		display: block;
+		z-index: 999;
+	}
+	.basket--flipper {
+		display: none;
+	}
+	.navigation--box--topline--basket {
+		display: none;
+	}
+	.navigation--box--topline {	    
+	    position: fixed;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    background-color: #2C2C2C;
+	    padding: 10px 0;
+	    width: 100%;
+	}
+	.basket--width {
+	    padding: 0;
+	}
+
+	.slick-next, .slick-prev {
+		display: none !important;
+	}
+	.sitedescription .showmore--but {
+		position: relative;		
+	}
+	.main__carousel--item img {
+	    max-height: 100%;
+	    width: auto;
+	    max-width: inherit;
+	    height: 100%;
+	}
+	.navigation--box--contacts {
+		text-align: center;
+		h4 {
+			margin: 0;
+		}
+		a {
+			margin: 0;
+		}
+	}
+	.navigation--navline--active {
+	    display: block;
+	    width: 100%;
+	    margin-left: -5%;
+	    margin-top: 25px;
+	}
+	.social-media {
+		h3 {
+			display: none;
+		}
+		&--icon-wrap {
+		    display: block;
+		    float: left;
+		    position: relative;
+		    width: 100%;
+		    text-align: center;
+		}
+		a {
+			display: inline-block;
+			float: none;
+			background-color: #263A47;
+			color: #fff;
+		}
+	}
+	.basket__foot {
+		padding: 15px;
+	}
+	.basket__content--item {
+	    height: 120px;
+	}
 }
 
 @media only screen and (max-width: 500px) {
-	.basket--width {
-		display: none;
+	.navigation--box--menutoggle {
+		width: 25%;
+		margin-left: 15px;
+	}
+	
+	.reviews i.fa.fa-chevron-right.slick-arrow {
+		right: 30%;
+	}
+	.reviews i.fa.fa-chevron-left.slick-arrow {
+	    left: 30%;
+	}
+	.reviews__carousel__item {
+		height: 300px !important;
+	}
+	.cookathome h3 {
+		text-align: center;
+		text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+	}
+	.footer__copyright {
+		padding-bottom: 30px;
+	}
+	.main__carousel--item--content h2 {
+	    font-size: 23px;
+	}
+	.navigation--logo {
+		width: 15%;
 	}
 }
