--- a/sass/style.css
+++ b/sass/style.css
@@ -278,6 +278,8 @@ ul {
       .navigation--box--menutoggle a {
         font-weight: 700;
         width: 100%; }
+    .navigation--box--baskettoggle {
+      margin-left: 25px; }
   .navigation--navline {
     display: block;
     float: left;
@@ -753,6 +755,8 @@ ul {
         color: #FFF; }
   .basket__foot {
     position: absolute;
+    display: block;
+    float: left;
     left: 0;
     right: 0;
     bottom: 0;
@@ -1054,12 +1058,6 @@ ul {
   .navigation--box--delivery {
     width: 40%; }
 
-  .navigation--box--onlinecam, .navigation--box--menutoggle {
-    display: none; }
-
-  .navigation--box--menutoggle {
-    display: block; }
-
   .navigation--navline {
     display: none; }
 
@@ -1129,6 +1127,12 @@ ul {
   .navigation--box--topline--basket {
     display: none; }
 
+  .navigation--box--onlinecam, .navigation--box--menutoggle {
+    display: none; }
+
+  .navigation--box--menutoggle {
+    display: block; }
+
   .navigation--box--topline {
     position: fixed;
     bottom: 0;
@@ -1184,7 +1188,16 @@ ul {
     padding: 15px; }
 
   .basket__content--item {
-    height: 120px; } }
+    height: 120px; }
+
+  .navigation--box--menutoggle {
+    width: 15%; }
+
+  .basket__head {
+    display: none; }
+
+  .basket__content {
+    margin-top: 15px; } }
 @media only screen and (max-width: 500px) {
   .navigation--box--menutoggle {
     width: 25%;
@@ -1211,5 +1224,22 @@ ul {
 
   .navigation--logo {
     width: 15%; } }
+@media only screen and (max-width: 320px) {
+  .social-media {
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
+
+  .main__carousel--item--content h2 {
+    font-size: 30px; }
+
+  .navigation--logo {
+    width: 20%; }
+
+  .navigation--box {
+    margin-left: 20%; }
+
+  .navigation--navline--active {
+    margin-left: -10px; } }
 
 /*# sourceMappingURL=style.css.map */
